VT - VirtualThreadConfig 설정